--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
     <header>Header Logo</header>
     <div>
         <h1>This Website is awesome</h1>
+        <h5>This website has some subtext that goes here under the main title.  
+            It's a smaller font and the color is lower contrast.</h5>
+            <button>Sign up</button>
+        <img src="" alt="">
     </div>
 
     <div>
         <h3>Some random information</h3>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
+        <div><img src="" alt=""></div>
     </div>
 
     <div>
