Edit index.html and styles.css, added images

--- a/index.html
+++ b/index.html
@@ -6,35 +6,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 
-    <header>Header Logo</header>
-    <div>
+
+    <header><a class="header">Header Logo</a>
+        <ul class="main-nav">
+            <li><a href="#">header link 1</a></li>
+            <li><a href="#">header link 2</a></li>
+            <li><a href="#">header link 3</a></li>
+        </ul>
+    </header>
+
+    <div class="top">    
         <h1>This Website is awesome</h1>
         <h5>This website has some subtext that goes here under the main title.  
             It's a smaller font and the color is lower contrast.</h5>
             <button>Sign up</button>
-        <img src="" alt="">
+        <img class="bible" src="bible-study.jpg" 
+        alt="reading a bible" title="Image by Steve Halsden from Pixabay">
     </div>
 
-    <div>
+    <div class="middle1">
         <h3>Some random information</h3>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
-        <div><img src="" alt=""></div>
+        <div><img width="150px" src="al-aqsa-mosque.jpg" alt="Image by Jim Black from Pixabay"></div>
+        <div><img width="150px" src="dead-sea.jpg" alt="Image by Svetlana from Pixabay"></div>
+        <div><img width="150px" src="haifa.jpg" alt="Image by Ekaterina Vysotina from Pixabay "></div>
+        <div><img width="150px" src="olive-trees.jpg" alt="Image by Irina Uzv from Pixabay"></div>
     </div>
 
-    <div>
+    <div class="middle2">
         <i>This is an inspiring quote, or a testimonial from a customer.  
             Maybe it's just filling up space, or maybe people will actually read it.  
             Who knows?  All I know is that it looks nice.</i>
             <em>-Thor, God of Thunder</em>
     </div>
 
-    <div>
+    <div class="bottom">
         <div>
             <em>Call to action!  It's time!</em>
             <h5>Sign up for our product by clicking the button right over there!</h5>
