Edited index.html and styles.css.

--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 <body>
 
     <div class="top"> 
-      <div class="topLeft"><a>Header Logo</a>
+      <div class="topLeft">
+        <div class="headerLogo">
+         <a>Header Logo</a>
+        </div>
         <h1>This Website is awesome</h1>
           <h5>This website has some subtext that goes here under the main title.  
             It's a smaller font and the color is lower contrast.</h5>
-            <button>Sign up</button>       
+            <button>Sign up!</button>       
          </div>
       
       <div class="topRight">
@@ -36,11 +39,23 @@
       <div class="info"><h3>Some random information</h3></div>
       </div>
         <div class="cards">
-        <img width="150px" src="al-aqsa-mosque.jpg" alt="Image by Jim Black from Pixabay">
+          <div>
+            <img width="150px" src="al-aqsa-mosque.jpg" alt="Image by Jim Black from Pixabay">
+            <h6>This is some subtext under an illustration or image.</h6>
+      </div>
+        <div>
         <img width="150px" src="dead-sea.jpg" alt="Image by Svetlana from Pixabay">
-        <img width="150px" src="haifa.jpg" alt="Image by Ekaterina Vysotina from Pixabay ">
-        <img width="150px" src="olive-trees.jpg" alt="Image by Irina Uzv from Pixabay">
-    </div>
+        <h6>This is some subtext under an illustration or image.</h6>
+      </div>
+        <div>
+          <img width="150px" src="haifa.jpg" alt="Image by Ekaterina Vysotina from Pixabay ">
+          <h6>This is some subtext under an illustration or image.</h6>
+        </div>
+          <div>
+          <img width="150px" src="olive-trees.jpg" alt="Image by Irina Uzv from Pixabay">
+          <h6>This is some subtext under an illustration or image.</h6>
+        </div>
+        </div>
   </div>
 
     <div class="middle2">
