--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <div class="headerLogo">
          <a>Header Logo</a>
         </div>
-        <h1>This Website is awesome</h1>
-          <h5>This website has some subtext that goes here under the main title.  
-            It's a smaller font and the color is lower contrast.</h5>
+        <p class="mainText">This Website is awesome<p>
+          <p>This website has some subtext that goes here under the main title.  
+            It's a smaller font and the color is lower contrast.<p>
             <button>Sign up!</button>       
          </div>
       
@@ -36,7 +36,7 @@
     </div>
 
     <div class="middle1">
-      <div class="info"><h3>Some random information</h3></div>
+      <div class="info"><h3>Some random information.</h3></div>
       </div>
         <div class="cards">
           <div>
@@ -59,9 +59,9 @@
   </div>
 
     <div class="middle2">
-        <i>This is an inspiring quote, or a testimonial from a customer.  
+        <p>This is an inspiring quote, or a testimonial from a customer.  
             Maybe it's just filling up space, or maybe people will actually read it.  
-            Who knows?  All I know is that it looks nice.</i>
+            Who knows?  All I know is that it looks nice.</p>
             <em>-Thor, God of Thunder</em>
     </div>
 
